# engram-memory-community

./: .gitignore  IMPROVEMENTS.md  LICENSE  README-community.md  README.md  detect-arch.sh  docker-compose.yml  openclaw.plugin.json  package.json  plugin.py  requirements.txt
.claude/commands/: graph.md
.engram/: graph.kuzu  hash_index.pkl  hot_tier.json
benchmarks/: longmemeval_bench.py
bridge/: README.md  __init__.py  cli.py  client.py  config.py  install.py  project.py  pull.py  push.py  pyproject.toml  pytest_plugin.py
bridge/engram_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: docker-compose.yml  openclaw-config.json
context/tools/: semantic_search.py
docker/all-in-one/: Dockerfile  init.sh
docker/all-in-one/services.d/fastembed/: run
docker/all-in-one/services.d/init/: up
docker/all-in-one/services.d/mcp-server/: run
docker/all-in-one/services.d/qdrant/: run
docker/fastembed/: Dockerfile  fastembed_service.py
docker/mcp/: Dockerfile  entrypoint.py
docs/: ARCHITECTURE.md  ENGRAM_CLOUD.md  EXAMPLES.md  LIMITATIONS.md  OPENCLAW_INTEGRATION.md  QUANTIZATION_MIGRATION.md  QUICK_START.md  SOUL-RULES.md  WAVE-PLANNING.md
docs/integrations/: README.md  aider.md  claude-code.md  claude-desktop.md  codex.md  cody.md  continue-dev.md  cursor.md  generic-mcp.md  generic-rest.md  windsurf.md
examples/: basic-usage.js  cloud-integration.js
mcp/: server.py
plugin/: index.js  openclaw.plugin.json  package.json
scripts/: backfill_hash_index.py  engram_graph.py  export_memories_for_graph.py  fastembed_service.py  install-plugin.sh  memory_search.py  memory_store.py  migrate_collection.py  setup-context.sh  setup.sh
sdks/python/: README.md  pyproject.toml
sdks/python/engram/: __init__.py  _http.py  client.py  exceptions.py  models.py
sdks/python/engrammemory_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdks/python/examples/: basic_usage.py  feedback_loop.py  hive_sharing.py  team_sharing.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/examples/: basic-usage.ts  feedback-loop.ts  hive-sharing.ts  team-sharing.ts
sdks/typescript/src/: client.ts  errors.ts  http.ts  index.ts  models.ts
skills/openclaw/: SKILL.md  openclaw.plugin.json  plugin.py
src/: index.ts
src/recall/: consolidation.py  graph_layer.py  hot_tier.py  models.py  multi_head_hasher.py  recall_engine.py  test_three_tiers.py
