[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engrammemory-ai"
version = "0.3.0"
description = "Memory infrastructure for AI agents. Your Qdrant, your hardware, our intelligence."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Engram Memory", email = "hello@engrammemory.ai" }
]
keywords = [
  "engram",
  "memory",
  "llm",
  "agent",
  "context",
  "vector-search",
  "sdk",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.25,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "build>=1.0",
]

[project.urls]
Homepage = "https://engrammemory.ai"
Documentation = "https://engrammemory.ai/docs"
Source = "https://github.com/engram-memory/engram-memory-community"

[tool.setuptools]
packages = ["engrammemory"]
